# RAG_Backend

./: Dockerfile  docker-compose.yml  hospital_rag.py  hospitaldata.txt  pyproject.toml
faiss_index/: index.faiss  index.pkl
